test/fail/TerminationHyvernatLoop.agda
{-# OPTIONS --hyvernat-termination-check #-}

bad : Set
bad = bad
